bookstore-graphql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstore-graphql-service
spec:
  selector:
    app: bookstore-graphql
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8910
  type: NodePort
